--- a/ustr/index.html
+++ b/ustr/index.html
@@ -86,7 +86,7 @@
 			<a href="manage">
 				Manage URLs
 			</a>
-			<a href="https://miohitokiri5474.github.com/" target="_blank" rel="noopener">
+			<a href="https://miohitokiri5474.github.io/" target="_blank" rel="noopener">
 				MiohitoKiri5474 Blog
 			</a>
 			<div class="flex"></div>
