--- a/mio/public/index.html
+++ b/mio/public/index.html
@@ -375,7 +375,7 @@
 
       
         
-          <p>我也有點忘記我最初為什麼會接處 Golang 了<br>應該是被「內建平行運算」這個功能燒到了吧，就有點好奇平行運算要怎麼實現<br>像是以前寫的語言如 C++，或是摸過一陣子的 Swift 3, Perl, Python 等等都是線性處理的（？<br>
+          <p>我也有點忘記我最初為什麼會接觸 Golang 了<br>應該是被「內建平行運算」這個功能燒到了吧，就有點好奇平行運算要怎麼實現<br>像是以前寫的語言如 C++，或是摸過一陣子的 Swift 3, Perl, Python 等等都是線性處理的（？<br>
           <!--noindex-->
           </p><div class="post-button text-center">
             <a class="btn" href="/code/gd-1/#more" rel="contents">
@@ -1662,7 +1662,7 @@
 
     <footer id="footer" class="footer">
       <div class="footer-inner">
-        <div class="copyright">© 2017 — <span itemprop="copyrightYear">2019</span>
+        <div class="copyright">© 2017 — <span itemprop="copyrightYear">2020</span>
   <span class="with-love">
     <i class="fa fa-"></i>
   </span>
